# myApp

./: .editorconfig  .flake8  .gitignore  Dockerfile  commands.txt  docker-compose.yml  pyproject.toml
inventorySystem/alumni/: models.py  urls.py  views.py
inventorySystem/alumni/migrations/: 0001_initial.py
inventorySystem/coffeTableApp/: apps.py
inventorySystem/events/: models.py  urls.py  views.py
inventorySystem/events/migrations/: 0001_initial.py  0002_alter_events_table.py
inventorySystem/inventorySystem/: settings.py  urls.py
inventorySystem/programs/: models.py  serializer.py  urls.py  views.py
inventorySystem/programs/migrations/: 0001_initial.py
inventorySystem/registrations/: models.py  serializer.py  urls.py  views.py
inventorySystem/registrations/migrations/: 0001_initial.py
inventorySystem/speakers/: models.py  serializer.py  urls.py  views.py
inventorySystem/speakers/migrations/: 0001_initial.py
postgres_data/: postmaster.pid
postgres_data/base/1/: 2619  2696  pg_internal.init
postgres_data/base/16384/: 1247  1249  1259  16387  16388  16393  16395  16396  16399  16401  16403  16404  16407  16409  16413  16415  16417  16421  16423  16429  16431  16437  16443  16450  16451  16464  16466  16479  16493  16494  16495  16514  16524  16528  2224  24582  24583  24589  24591  24597  (+41 more)
postgres_data/base/5/: pg_internal.init
postgres_data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres_data/pg_stat/: pgstat.stat
