[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["John Ivan Flores"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.7"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
pygments = "^2.19.1"
djangorestframework = "^3.16.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
